# stdash

./: Dockerfile  pyproject.toml  requirements.txt
note/: graph for streamlit.ipynb
src/stdash/: .app.py.swp  Main.py  app.py
src/stdash/pages/: app1.py  app2.py  app3.py  page1.py  page2.py  page3.py
